force-app/main/default/objects/Car_Park_Required__c/fields/Car_Park_Amount__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Car Park Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>