force-app/main/default/objects/Car_Park_Required__c/fields/Car_Park_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Type__c</fullName>
    <label>Car Park Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Podium Parking</fullName>
            </value>
            <value>
                <fullName>Open Parking</fullName>
            </value>
            <value>
                <fullName>Stack Upper Parking</fullName>
            </value>
            <value>
                <fullName>Stack Lower Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>