force-app/main/default/objects/Car_Park_Required__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>Car Park Required</relationshipLabel>
    <relationshipName>Car_Park_Required</relationshipName>
    <type>Lookup</type>
</CustomField>